...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_history_coco"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/history"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonLogout"
        app:layout_constraintTop_toBottomOf="@+id/profileInfo" />


    <Button
...
