<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/closeCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/close_camera"
        android:elevation="2dp"
        android:src="@drawable/ic_arrow_back"
        app:tint="@color/blue_ivy" />

    <ImageView
        android:id="@+id/switchCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/switch_camera"
        android:elevation="2dp"
        android:src="@drawable/ic_switch_camera"
        app:tint="@color/blue_ivy" />

    <ImageView
        android:contentDescription="@string/camera"
        android:id="@+id/camera_capture_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        android:src="@drawable/ic_capture"
        app:tint="@color/blue_ivy" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scaleType="fitCenter" />

</RelativeLayout>